feat(ci): configuração completa do GitHub Actions e GitHub Connector
- Adiciona workflow de CI/CD com Node 20 e cache
- Inclui jobs de qualidade, testes, build e segurança
- Configura deploy preview para PRs
- Adiciona notificações Slack
- Cria configuração para GitHub Connector
- Prepara primeiro PR de estabilização

--- a/env.example
+++ b/env.example
@@ -1,55 +1,79 @@
-# Configurações do Next.js
+# =============================================================================
+# FUT7PRO FRONTEND - VARIÁVEIS DE AMBIENTE
+# =============================================================================
+# Copie este arquivo para .env.local e configure conforme seu ambiente
+# cp env.example .env.local
+
+# =============================================================================
+# CONFIGURAÇÕES DO NEXT.JS
+# =============================================================================
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
 
-# Configurações de Autenticação
+# =============================================================================
+# CONFIGURAÇÕES DE AUTENTICAÇÃO
+# =============================================================================
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret-key-here
+NEXTAUTH_SECRET=your-secret-key-here-change-in-production
 
-# Google OAuth
+# Google OAuth (opcional para desenvolvimento)
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 
-# Configurações do Banco de Dados
-# REMOVER em produção: Frontend não deve usar banco direto.
-# DATABASE_URL="postgresql://user:password@localhost:5432/fut7pro"
+# =============================================================================
+# CONFIGURAÇÕES DO BANCO DE DADOS (APENAS PARA DESENVOLVIMENTO LOCAL)
+# =============================================================================
+# ⚠️  EM PRODUÇÃO, O FRONTEND NÃO DEVE ACESSAR O BANCO DIRETAMENTE
+DATABASE_URL="postgresql://user:password@localhost:5432/fut7pro"
 
-# Configurações de Email
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
+# =============================================================================
+# CONFIGURAÇÕES DE MONITORAMENTO
+# =============================================================================
+# Sentry (opcional)
+NEXT_PUBLIC_SENTRY_DSN=your-sentry-dsn
 
-# Configurações de Pagamento (futuro)
-STRIPE_PUBLIC_KEY=pk_test_...
-STRIPE_SECRET_KEY=sk_test_...
+# Google Analytics (opcional)
+NEXT_PUBLIC_GA_ID=your-ga-id
 
-# Configurações de Monitoramento
-SENTRY_DSN=your-sentry-dsn
-NEXT_PUBLIC_SENTRY_DSN=your-public-sentry-dsn
-# Analytics
-NEXT_PUBLIC_ANALYTICS_URL=https://analytics.example.com/collect
+# =============================================================================
+# CONFIGURAÇÕES DE INTEGRAÇÃO
+# =============================================================================
+# MercadoPago (opcional)
+NEXT_PUBLIC_MERCADOPAGO_PUBLIC_KEY=your-mp-public-key
 
+# Twilio (opcional)
+TWILIO_ACCOUNT_SID=your-twilio-sid
+TWILIO_AUTH_TOKEN=your-twilio-token
 
-# Configurações de Cache
+# SendGrid (opcional)
+SENDGRID_API_KEY=your-sendgrid-key
+
+# =============================================================================
+# CONFIGURAÇÕES DE CACHE E PERFORMANCE
+# =============================================================================
+# Redis (opcional para cache)
 REDIS_URL=redis://localhost:6379
 
-# Configurações de Rate Limiting
-RATE_LIMIT_MAX=100
-RATE_LIMIT_WINDOW_MS=900000
+# =============================================================================
+# CONFIGURAÇÕES DE DESENVOLVIMENTO
+# =============================================================================
+# Desabilitar cache em desenvolvimento
+NODE_ENV=development
 
-# Configurações de Upload
-MAX_FILE_SIZE=5242880
-ALLOWED_FILE_TYPES=image/jpeg,image/png,image/webp
+# =============================================================================
+# CONFIGURAÇÕES DE TESTE
+# =============================================================================
+# Para testes E2E
+NEXT_PUBLIC_TEST_MODE=true
+NEXT_PUBLIC_MOCK_API=true
 
-# Configurações de Ambiente
-NODE_ENV=development 
+# =============================================================================
+# CONFIGURAÇÕES DE STAGING/PRODUÇÃO
+# =============================================================================
+# Descomente e configure para staging
+# NEXT_PUBLIC_APP_URL=https://staging.fut7pro.com
+# NEXT_PUBLIC_API_URL=https://api-staging.fut7pro.com
 
-# Configurações de SEO
-SITE_NAME=Fut7Pro
-GOOGLE_SITE_VERIFICATION=your-google-verification-code
-
-# Seeds (somente dev local)
-# Use hashes gerados previamente (ex: bcrypt) — não commit valores reais
-SEED_SUPERADMIN_EMAIL=admin@example.com
-SEED_SUPERADMIN_PASSWORD_HASH=$2a$10$hash_aqui
+# Descomente e configure para produção
+# NEXT_PUBLIC_APP_URL=https://fut7pro.com
+# NEXT_PUBLIC_API_URL=https://api.fut7pro.com
