feat(ci): adiciona pipeline do frontend + docs de estabilização e connector

--- a/env.example
+++ b/env.example
@@ -1,79 +1,16 @@
-# =============================================================================
-# FUT7PRO FRONTEND - VARIÁVEIS DE AMBIENTE
-# =============================================================================
-# Copie este arquivo para .env.local e configure conforme seu ambiente
-# cp env.example .env.local
+# ===== Fut7Pro - Frontend (.env.example) =====
+# Copie para .env em dev/CI
 
-# =============================================================================
-# CONFIGURAÇÕES DO NEXT.JS
-# =============================================================================
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_API_URL=http://localhost:3000/api
+# API base (ambiente de testes/homolog)
+NEXT_PUBLIC_API_URL=http://localhost:3001
 
-# =============================================================================
-# CONFIGURAÇÕES DE AUTENTICAÇÃO
-# =============================================================================
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret-key-here-change-in-production
+# Multi-tenant (slug do racha padrão para desenvolvimento)
+NEXT_PUBLIC_DEFAULT_RACHA_SLUG=fut7pro
 
-# Google OAuth (opcional para desenvolvimento)
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+# Feature flags básicas
+NEXT_PUBLIC_ENABLE_ANALYTICS=false
+NEXT_PUBLIC_ENABLE_MOCKS=false
 
-# =============================================================================
-# CONFIGURAÇÕES DO BANCO DE DADOS (APENAS PARA DESENVOLVIMENTO LOCAL)
-# =============================================================================
-# ⚠️  EM PRODUÇÃO, O FRONTEND NÃO DEVE ACESSAR O BANCO DIRETAMENTE
-DATABASE_URL="postgresql://user:password@localhost:5432/fut7pro"
-
-# =============================================================================
-# CONFIGURAÇÕES DE MONITORAMENTO
-# =============================================================================
-# Sentry (opcional)
-NEXT_PUBLIC_SENTRY_DSN=your-sentry-dsn
-
-# Google Analytics (opcional)
-NEXT_PUBLIC_GA_ID=your-ga-id
-
-# =============================================================================
-# CONFIGURAÇÕES DE INTEGRAÇÃO
-# =============================================================================
-# MercadoPago (opcional)
-NEXT_PUBLIC_MERCADOPAGO_PUBLIC_KEY=your-mp-public-key
-
-# Twilio (opcional)
-TWILIO_ACCOUNT_SID=your-twilio-sid
-TWILIO_AUTH_TOKEN=your-twilio-token
-
-# SendGrid (opcional)
-SENDGRID_API_KEY=your-sendgrid-key
-
-# =============================================================================
-# CONFIGURAÇÕES DE CACHE E PERFORMANCE
-# =============================================================================
-# Redis (opcional para cache)
-REDIS_URL=redis://localhost:6379
-
-# =============================================================================
-# CONFIGURAÇÕES DE DESENVOLVIMENTO
-# =============================================================================
-# Desabilitar cache em desenvolvimento
-NODE_ENV=development
-
-# =============================================================================
-# CONFIGURAÇÕES DE TESTE
-# =============================================================================
-# Para testes E2E
-NEXT_PUBLIC_TEST_MODE=true
-NEXT_PUBLIC_MOCK_API=true
-
-# =============================================================================
-# CONFIGURAÇÕES DE STAGING/PRODUÇÃO
-# =============================================================================
-# Descomente e configure para staging
-# NEXT_PUBLIC_APP_URL=https://staging.fut7pro.com
-# NEXT_PUBLIC_API_URL=https://api-staging.fut7pro.com
-
-# Descomente e configure para produção
-# NEXT_PUBLIC_APP_URL=https://fut7pro.com
-# NEXT_PUBLIC_API_URL=https://api.fut7pro.com
+# Se usar NextAuth no frontend público:
+# NEXTAUTH_URL=http://localhost:3000
+# NEXTAUTH_SECRET=replace-me
