--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,228 +1,104 @@
-name: Frontend CI/CD
+name: Frontend CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, fix/**, feat/**, chore/** ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
 
-env:
-  NODE_VERSION: '20'
-  PNPM_VERSION: '8'
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
-  # Job de qualidade de código
-  quality:
-    name: Code Quality
+  ci:
+    name: Lint • Typecheck • Test • Build
     runs-on: ubuntu-latest
-    
+
+    defaults:
+      run:
+        shell: bash
+
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Use Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: 20
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run ESLint
-        run: npm run lint
-
-      - name: Run TypeScript check
-        run: npm run type-check
-
-      - name: Run Prettier check
-        run: npm run format:check
-
-  # Job de testes
-  test:
-    name: Tests
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm run test:ci
-
-      - name: Upload coverage reports
-        uses: codecov/codecov-action@v3
-        if: always()
-
-  # Job de build
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    needs: [quality, test]
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Setup environment
+      - name: Show versions
         run: |
-          cp .env.example .env.local
-          echo "NEXT_PUBLIC_API_URL=https://api-staging.fut7pro.com" >> .env.local
-          echo "NEXT_PUBLIC_APP_URL=https://staging.fut7pro.com" >> .env.local
+          node -v
+          npm -v
 
-      - name: Build application
+      - name: Create .env from example (if present)
+        run: |
+          if [ -f .env.example ]; then cp .env.example .env; fi
+
+      - name: Install deps (npm ci)
+        run: npm ci
+
+      - name: Type check (TS)
+        run: npm run type-check --if-present
+
+      - name: Lint (ESLint)
+        run: npm run lint --if-present
+
+      - name: Unit tests
+        run: npm test --if-present -- --ci --reporters=default --reporters=jest-junit
+        env:
+          JEST_JUNIT_OUTPUT: reports/junit/junit.xml
+
+      - name: Build (Next.js)
         run: npm run build
 
-      - name: Upload build artifacts
+      - name: Upload build artifact
+        if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: build-files
-          path: .next/
-          retention-days: 1
-
-  # Job de análise de bundle
-  analyze:
-    name: Bundle Analysis
-    runs-on: ubuntu-latest
-    needs: [quality, test]
-    if: github.event_name == 'pull_request'
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Setup environment
-        run: |
-          cp .env.example .env.local
-          echo "NEXT_PUBLIC_API_URL=https://api-staging.fut7pro.com" >> .env.local
-
-      - name: Analyze bundle
-        run: npm run analyze
-
-      - name: Upload bundle analysis
-        uses: actions/upload-artifact@v4
-        with:
-          name: bundle-analysis
-          path: .next/analyze/
+          name: next-build
+          path: .next
+          if-no-files-found: ignore
           retention-days: 7
 
-  # Job de segurança
-  security:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: npm audit (advisories)
+        run: npm audit --audit-level=high || true
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run security audit
-        run: npm audit --audit-level=moderate
-
-      - name: Run Snyk security scan
-        uses: snyk/actions/node@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --severity-threshold=high
-
-  # Job de deploy preview (apenas para PRs)
   preview:
-    name: Deploy Preview
+    name: Deploy Preview (Vercel) — optional
+    needs: ci
+    if: ${{ github.event_name == 'pull_request' && success() && secrets.VERCEL_TOKEN != '' }}
     runs-on: ubuntu-latest
-    needs: [quality, test, build]
-    if: github.event_name == 'pull_request'
-    environment: preview
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: 20
           cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Setup environment
+      - run: npm ci
+      - name: Vercel Pull Request Preview
         run: |
-          cp .env.example .env.local
-          echo "NEXT_PUBLIC_API_URL=https://api-staging.fut7pro.com" >> .env.local
-          echo "NEXT_PUBLIC_APP_URL=https://staging.fut7pro.com" >> .env.local
+          npx vercel pull --yes --token=$VERCEL_TOKEN
+          npx vercel build --token=$VERCEL_TOKEN
+          npx vercel deploy --prebuilt --token=$VERCEL_TOKEN
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
-      - name: Build for preview
-        run: npm run build
-
-      - name: Deploy to Vercel Preview
-        uses: amondnet/vercel-action@v25
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod'
-
-  # Job de notificação
   notify:
-    name: Notify Results
+    name: Slack Notify
+    needs: [ci]
+    if: ${{ always() && secrets.SLACK_WEBHOOK_URL != '' }}
     runs-on: ubuntu-latest
-    needs: [quality, test, build, security]
-    if: always()
-    
     steps:
-      - name: Notify Slack on failure
-        uses: 8398a7/action-slack@v3
-        if: failure()
-        with:
-          status: failure
-          webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
-          text: '❌ Frontend CI/CD failed for ${{ github.repository }}#${{ github.run_number }}'
-          channel: '#devops'
-          username: 'GitHub Actions'
-
-      - name: Notify Slack on success
-        uses: 8398a7/action-slack@v3
-        if: success()
-        with:
-          status: success
-          webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
-          text: '✅ Frontend CI/CD passed for ${{ github.repository }}#${{ github.run_number }}'
-          channel: '#devops'
-          username: 'GitHub Actions'
+      - name: Send status to Slack
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_COLOR: ${{ needs.ci.result == 'success' && 'good' || 'danger' }}
+          SLACK_TITLE: "Frontend CI — ${{ github.repository }}"
+          SLACK_MESSAGE: "Workflow *${{ github.workflow }}* for *${{ github.ref_name }}* finished with *${{ needs.ci.result }}*."
