ci(guard): regra anti-mudança de layout + PR Guard (Danger) + labels + template

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,12 +2,13 @@ version: 2
 updates:
   - package-ecosystem: "npm"
     directory: "/"
-    schedule:
-      interval: "weekly"
+    schedule: { interval: "weekly" }
     open-pull-requests-limit: 5
-    labels: ["deps", "frontend"]
+    labels: ["deps","frontend","ci"]
+    groups:
+      minor-and-patch:
+        update-types: ["minor","patch"]
   - package-ecosystem: "github-actions"
     directory: "/"
-    schedule:
-      interval: "monthly"
-    labels: ["deps", "ci"]
+    schedule: { interval: "monthly" }
+    labels: ["deps","ci"]
