--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "recharts": "^3.0.0",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
+    "web-vitals": "^5.1.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -90,7 +91,8 @@
     "prisma": "^6.9.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "danger": "^13.0.4"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
