--- a/.github/workflows/labels-sync.yml
+++ b/.github/workflows/labels-sync.yml
@@ -1,20 +1,21 @@
 name: Sync Labels
+
 on:
+  workflow_dispatch:
   push:
-    branches: [ main ]
-    paths: [ ".github/labels.yml" ]
-  workflow_dispatch: {}
+    paths:
+      - .github/labels.yml
 
 permissions:
   contents: read
   issues: write
 
 jobs:
-  sync:
+  labels:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: crazy-max/ghaction-github-labeler@v5
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           yaml-file: .github/labels.yml
-          skip-delete: false
