--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,12 +18,13 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:jsx-a11y/recommended",
+    "plugin:tailwindcss/recommended",
     "plugin:prettier/recommended"
   ],
   "plugins": ["@typescript-eslint", "react", "react-hooks", "jsx-a11y", "prettier", "tailwindcss"],
   "rules": {
     "prettier/prettier": "error",
-    "tailwindcss/classnames-order": "warn",
+    "tailwindcss/classnames-order": "off",
     "tailwindcss/no-custom-classname": "off",
     "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
     "react/react-in-jsx-scope": "off"
