--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
     "esModuleInterop": true,
     "noImplicitAny": false,
     "strictNullChecks": false,
+    "moduleResolution": "node",
+    "types": ["node", "next"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
