fix(web): pin Next 14.2.5 and add web-vitals

--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "lint:fix": "next lint --dir src --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "prepare": "husky install",
-    "test": "jest",
+    "prepare": "husky",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --coverageReporters=text --coverageReporters=lcov --coverageReporters=html",
+    "test:cov": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "test:unit": "jest --testPathPattern=src/hooks/__tests__",
     "test:components": "jest --testPathPattern=src/components/__tests__",
     "test:integration": "jest --testPathPattern=src/hooks/__tests__ --testPathPattern=src/components/__tests__",
     "test:all": "npm run test:unit && npm run test:components && npm run test:coverage",
+    "setup:env": "node -e \"const fs=require('fs'); const content='# API Configuration\\nNEXT_PUBLIC_API_URL=https://api.fut7pro.com.br\\n\\n# Mercado Pago (opcional - para desenvolvimento local)\\nNEXT_PUBLIC_MP_PUBLIC_KEY=your_mp_public_key_here\\n\\n# Tenant ID (em produção, viria do contexto de autenticação)\\nNEXT_PUBLIC_DEMO_TENANT_ID=demo-tenant\\n\\n# Environment\\nNODE_ENV=development\\n'; fs.writeFileSync('.env.local', content); console.log('✅ Arquivo .env.local criado!');\"",
+    "test:billing": "node scripts/test-billing.js",
     "analyze": "ANALYZE=true npm run build",
     "clean": "rm -rf .next out",
     "db:generate": "prisma generate",
@@ -31,6 +34,8 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@headlessui/react": "^2.2.4",
     "@prisma/client": "^6.9.0",
+    "@sentry/browser": "^10.11.0",
+    "@sentry/nextjs": "^10.11.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -42,13 +47,13 @@
     "json2csv": "^6.0.0-alpha.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.514.0",
-    "next": "^15.4.3",
+    "next": "14.2.5",
     "next-auth": "^4.24.11",
     "node-cron": "^4.1.1",
     "pdfmake": "^0.2.20",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-easy-crop": "^5.4.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
@@ -56,6 +61,7 @@
     "recharts": "^3.0.0",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
+    "web-vitals": "^4.2.4",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -64,6 +70,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/json2csv": "^5.0.7",
     "@types/node": "^20.11.30",
     "@types/node-cron": "^3.0.11",
@@ -74,8 +81,8 @@
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "^15.3.3",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.4.1",
@@ -90,8 +97,14 @@
     "prettier": "^3.5.3",
     "prisma": "^6.9.0",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.4.1",
     "tsx": "^4.7.0",
     "typescript": "^5.8.3"
+  },
+  "overrides": {
+    "next": "14.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
