fix(ci): prevent husky install failure in production builds
- Modified prepare script to check if husky command exists before running
- This prevents build failures on Vercel where devDependencies are not installed
- Uses command -v to check availability and || true as fallback

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "next lint --dir src --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "prepare": "husky install",
+    "prepare": "command -v husky >/dev/null 2>&1 && husky install || true",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
