--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "next lint --dir src --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "prepare": "command -v husky >/dev/null 2>&1 && husky install || true",
+    "prepare": "node -e \"process.exit(process.env.CI?0:1)\" || husky install",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
