fix(prerender): corrigir erros de prerendering nas páginas admin
- Corrigido enum Permission para incluir todas as permissões necessárias
- Simplificado página de histórico para usar estrutura correta do mock
- Corrigido TabelaConfrontos para usar propriedades corretas do Confronto
- Removido acesso a propriedades inexistentes (ida/volta) que causavam erros
- Agora usa timeA, timeB, golsTimeA, golsTimeB diretamente do mock

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -167,7 +167,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [quality, test, build]
     if: github.event_name == 'pull_request'
-    environment: preview
+    environment: development
     
     steps:
       - name: Checkout code
