--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "test:components": "jest --testPathPattern=src/components/__tests__",
     "test:integration": "jest --testPathPattern=src/hooks/__tests__ --testPathPattern=src/components/__tests__",
     "test:all": "npm run test:unit && npm run test:components && npm run test:coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:seo": "playwright test tests/seo/robots-header.spec.ts",
     "setup:env": "node -e \"const fs=require('fs'); const content='# API Configuration\\nNEXT_PUBLIC_API_URL=https://api.fut7pro.com.br\\n\\n# Mercado Pago (opcional - para desenvolvimento local)\\nNEXT_PUBLIC_MP_PUBLIC_KEY=your_mp_public_key_here\\n\\n# Tenant ID (em produção, viria do contexto de autenticação)\\nNEXT_PUBLIC_DEMO_TENANT_ID=demo-tenant\\n\\n# Environment\\nNODE_ENV=development\\n'; fs.writeFileSync('.env.local', content); console.log('✅ Arquivo .env.local criado!');\"",
     "test:billing": "node scripts/test-billing.js",
     "analyze": "ANALYZE=true npm run build",
@@ -36,6 +40,7 @@
     "@prisma/client": "^6.9.0",
     "@sentry/browser": "^10.11.0",
     "@sentry/nextjs": "^10.11.0",
+    "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -51,6 +56,7 @@
     "next-auth": "^4.24.11",
     "node-cron": "^4.1.1",
     "pdfmake": "^0.2.20",
+    "postcss": "^8.5.4",
     "react": "18.2.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "18.2.0",
@@ -62,12 +68,11 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.4",
     "web-vitals": "^4.2.4",
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/bcryptjs": "^2.4.6",
