feat(performance): otimizações finais de performance e segurança
- Middleware enxuto: reduz custo, não roda em assets
- Proxy com cache CDN-friendly: s-maxage=60, stale-while-revalidate=300
- CI de qualidade: typecheck e lint em PRs
- Dados estruturados no site institucional (www.fut7pro.com.br)
- Scripts de typecheck e lint funcionais
- CI de SEO com secrets para evitar bater na produção

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "build": "next build",
     "start": "next start",
     "type-check": "tsc --noEmit",
-    "typecheck": "echo 'Typecheck disabled for CI compatibility'",
-    "lint": "echo 'Lint disabled for CI compatibility'",
+    "typecheck": "tsc --noEmit",
+    "lint": "next lint",
     "lint:fix": "next lint --dir src --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
