--- a/.github/workflows/seo-ci.yml
+++ b/.github/workflows/seo-ci.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Run SEO tests (prod endpoints)
         env:
           # caso seus testes usem BASE_URL
-          BASE_URL: https://app.fut7pro.com.br
+          BASE_URL: ${{ secrets.BASE_URL || 'https://app.fut7pro.com.br' }}
         run: npm run test:seo
