chore(gitignore): ignora .env/artefatos; remove do índice e adiciona .env.example

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,17 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Env
+.env
+.env.*
+!.env.example
+
+# Playwright
+playwright-report/
+test-results/
+
+# Next
+.next/
+out/
+.vercel/
