fix(build): Suspense useSearchParams; rotas Prisma force-dynamic; sitemap dinâmico; ESLint toolchain

--- a/env.local.example
+++ b/env.local.example
@@ -1,27 +1,14 @@
-# API Configuration
-NEXT_PUBLIC_API_URL=https://api.fut7pro.com.br
-NEXT_PUBLIC_APP_URL=https://www.fut7pro.com.br
+# Local web app URL
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# Mercado Pago
-NEXT_PUBLIC_MERCADOPAGO_PUBLIC_KEY=TEST-...
+# API endpoints (use staging URLs if preferred)
+NEXT_PUBLIC_API_URL=http://localhost:3333
+BACKEND_URL=http://localhost:3333
 
-# Tenant ID (em produção, virá do contexto de autenticação)
-NEXT_PUBLIC_DEMO_TENANT_ID=demo-tenant
+# NextAuth local setup
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=dev-strong-secret
 
-# Environment
-NODE_ENV=development
-
-# NextAuth
-NEXTAUTH_URL=https://www.fut7pro.com.br
-NEXTAUTH_SECRET=chave-super-secreta-producao
-
-# Google OAuth (opcional)
-GOOGLE_CLIENT_ID=seu-google-client-id
-GOOGLE_CLIENT_SECRET=seu-google-client-secret
-
-# Backend / Proxy
-BACKEND_URL=https://api.fut7pro.com.br
-JOGOS_DIA_PATH=/partidas/jogos-do-dia
-
-# Prisma (dev only)
-DATABASE_URL="postgresql://user:password@localhost:5432/fut7pro"
+# Playwright admin test account
+TEST_EMAIL=admin@fut7pro.dev
+TEST_PASSWORD=senha-de-teste
