--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "test:unit": "jest --testPathPattern=src/hooks/__tests__",
     "test:components": "jest --testPathPattern=src/components/__tests__",
     "test:integration": "jest --testPathPattern=src/hooks/__tests__ --testPathPattern=src/components/__tests__",
-    "test:all": "npm run test:unit && npm run test:components && npm run test:coverage",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
-    "test:e2e:headed": "playwright test --headed",
+    "test:all": "npm run test:unit && npm run test:components && npm run test:cov",
+    "test:e2e": "npm run e2e:build && playwright test",
+    "test:e2e:ui": "npm run e2e:build && playwright test --ui",
+    "test:e2e:headed": "npm run e2e:build && playwright test --headed",
+    "test:e2e:grep": "npm run e2e:build && npm run pw:grep --",
+    "pw:grep": "playwright test -g",
     "report": "playwright show-report --port=0",
     "test:seo": "playwright test tests/seo/robots-header.spec.ts",
-    "setup:env": "node -e \"const fs=require('fs'); const content='# API Configuration\\nNEXT_PUBLIC_API_URL=https://api.fut7pro.com.br\\n\\n# Mercado Pago (opcional - para desenvolvimento local)\\nNEXT_PUBLIC_MP_PUBLIC_KEY=your_mp_public_key_here\\n\\n# Tenant ID (em produÃ§Ã£o, viria do contexto de autenticaÃ§Ã£o)\\nNEXT_PUBLIC_DEMO_TENANT_ID=demo-tenant\\n\\n# Environment\\nNODE_ENV=development\\n'; fs.writeFileSync('.env.local', content); console.log('âœ… Arquivo .env.local criado!');\"",
+    "setup:env": "node -e \"const fs=require('fs'); const content='# API Configuration\\nNEXT_PUBLIC_API_URL=https://api.fut7pro.com.br\\n\\n# Mercado Pago (opcional - para desenvolvimento local)\\nNEXT_PUBLIC_MP_PUBLIC_KEY=your_mp_public_key_here\\n\\n# Tenant ID (em produção, viria do contexto de autenticação)\\nNEXT_PUBLIC_DEMO_TENANT_ID=demo-tenant\\n\\n# Environment\\nNODE_ENV=development\\n'; fs.writeFileSync('.env.local', content); console.log('✅ Arquivo .env.local criado!');\"",
     "test:billing": "node scripts/test-billing.js",
     "analyze": "ANALYZE=true npm run build",
     "clean": "rm -rf .next out",
@@ -39,7 +41,12 @@
     "dev:migrate-seed": "powershell -ExecutionPolicy Bypass -File scripts/dev-migrate-seed.ps1 -Slug demo-rachao",
     "e2e:local": "powershell -ExecutionPolicy Bypass -File scripts/run-e2e-local.ps1 -Slug demo-rachao",
     "audit:prisma": "tsx scripts/audit-prisma-imports.ts",
-    "lint:admin": "tsx scripts/lint-admin-autofix.ts"
+    "lint:admin": "tsx scripts/lint-admin-autofix.ts",
+    "e2e:build": "next build",
+    "e2e:start": "next start -p 3000 -H 127.0.0.1",
+    "e2e:serve": "npm run e2e:build && npm run e2e:start",
+    "prisma:generate": "prisma generate",
+    "postinstall": "prisma generate || echo prisma:generate skipped"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -94,9 +101,9 @@
     "@types/react-dom": "^18.2.18",
     "@types/recharts": "^1.8.29",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.34.0",
-    "@typescript-eslint/parser": "^8.34.0",
-    "eslint": "8.57.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -122,7 +129,7 @@
   "lint-staged": {
     "*.{js,ts,tsx}": [
       "prettier --write",
-      "eslint --fix"
+      "next lint --fix --file"
     ],
     "*.{json,css,md}": [
       "prettier --write"
