docs(web): guia p/ dev e exemplos de env atualizados

--- a/env.local.example
+++ b/env.local.example
@@ -12,3 +12,12 @@ NEXTAUTH_SECRET=dev-strong-secret
 # Playwright admin test account
 TEST_EMAIL=admin@fut7pro.dev
 TEST_PASSWORD=senha-de-teste
+TEST_TENANT_ID=fut7pro
+TEST_TENANT_SLUG=fut7pro
+TEST_TENANT_NAME=Fut7Pro
+TEST_USER_NAME=Administrador Demo
+TEST_USER_ID=test-admin
+TEST_USER_SLUG=admin-demo
+TEST_MEMBERSHIP_ROLE=ADMIN
+TEST_MEMBERSHIP_STATUS=APROVADO
+TEST_MEMBERSHIP_ID=test-membership
