--- a/env.example
+++ b/env.example
@@ -65,4 +65,13 @@ JOGOS_DIA_PATH=/partidas/jogos-do-dia
 # Playwright admin test account
 TEST_EMAIL=admin@fut7pro.dev
 TEST_PASSWORD=senha-de-teste
+TEST_TENANT_ID=fut7pro
+TEST_TENANT_SLUG=fut7pro
+TEST_TENANT_NAME=Fut7Pro
+TEST_USER_NAME=Administrador Demo
+TEST_USER_ID=test-admin
+TEST_USER_SLUG=admin-demo
+TEST_MEMBERSHIP_ROLE=ADMIN
+TEST_MEMBERSHIP_STATUS=APROVADO
+TEST_MEMBERSHIP_ID=test-membership
 
