chore(web): atualização schema Prisma e scripts de build

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "pw:grep": "playwright test -g",
     "report": "playwright show-report --port=0",
     "test:seo": "playwright test tests/seo/robots-header.spec.ts",
-    "setup:env": "node -e \"const fs=require('fs'); const content='# API Configuration\\nNEXT_PUBLIC_API_URL=https://api.fut7pro.com.br\\n\\n# Mercado Pago (opcional - para desenvolvimento local)\\nNEXT_PUBLIC_MP_PUBLIC_KEY=your_mp_public_key_here\\n\\n# Tenant ID (em produção, viria do contexto de autenticação)\\nNEXT_PUBLIC_DEMO_TENANT_ID=demo-tenant\\n\\n# Environment\\nNODE_ENV=development\\n'; fs.writeFileSync('.env.local', content); console.log('✅ Arquivo .env.local criado!');\"",
+    "setup:env": "node -e \"const fs=require('fs'); const content='# API Configuration\\nNEXT_PUBLIC_API_URL=https://api.fut7pro.com.br\\n\\n# Mercado Pago (opcional - para desenvolvimento local)\\nNEXT_PUBLIC_MP_PUBLIC_KEY=your_mp_public_key_here\\n\\n# Tenant ID (em produção, viria do contexto de autenticação)\\nNEXT_PUBLIC_DEMO_TENANT_ID=demo-tenant\\n\\n# Environment\\nNODE_ENV=development\\n'; fs.writeFileSync('.env.local', content); console.log('? Arquivo .env.local criado!');\"",
     "test:billing": "node scripts/test-billing.js",
     "analyze": "ANALYZE=true npm run build",
     "clean": "rm -rf .next out",
@@ -62,6 +62,7 @@
     "critters": "^0.0.23",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^12.17.0",
     "html2canvas": "^1.4.1",
     "json2csv": "^6.0.0-alpha.2",
@@ -110,7 +111,6 @@
     "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-tailwindcss": "^3.18.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.5",
