--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,9 +1,15 @@
 name: E2E
 
 on:
-  push:
-  pull_request:
 
+  paths-ignore:
+    - '**/*.md'
+    - 'docs/**'
+    - 'AUDITORIA_*'
+paths-ignore:
+    - '**/*.md'
+    - 'docs/**'
+    - 'AUDITORIA_*'
 jobs:
   e2e-site-bypass:
     name: E2E (site / publish flow com bypass)
@@ -157,3 +163,4 @@ jobs:
           name: playwright-report-auth
           path: playwright-report
           retention-days: 7
+
