--- a/.github/workflows/seo-ci.yml
+++ b/.github/workflows/seo-ci.yml
@@ -1,7 +1,11 @@
 name: SEO / Headers CI
 
 on:
-  pull_request:
+
+  paths-ignore:
+    - '**/*.md'
+    - 'docs/**'
+    - 'AUDITORIA_*'
     branches: [ main ]
 
 jobs:
@@ -27,3 +31,4 @@ jobs:
           # caso seus testes usem BASE_URL
           BASE_URL: ${{ secrets.BASE_URL || 'https://app.fut7pro.com.br' }}
         run: npm run test:seo
+
