--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -1,10 +1,18 @@
 name: Web CI
 
 on:
-  push:
-    paths:
+
+  paths-ignore:
+    - '**/*.md'
+    - 'docs/**'
+    - 'AUDITORIA_*'
+paths:
       - "fut7pro-web/**"
-  pull_request:
+
+  paths-ignore:
+    - '**/*.md'
+    - 'docs/**'
+    - 'AUDITORIA_*'
     paths:
       - "fut7pro-web/**"
 
@@ -42,3 +50,4 @@ jobs:
           NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL }}
           NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
           NEXT_PUBLIC_SENTRY_DSN: ${{ secrets.NEXT_PUBLIC_SENTRY_DSN }}
+
