chore(env): apontar NEXT_PUBLIC_API_URL para https://api.fut7pro.com.br

--- a/env.local.example
+++ b/env.local.example
@@ -1,5 +1,6 @@
 # API Configuration
 NEXT_PUBLIC_API_URL=https://api.fut7pro.com.br
+BACKEND_URL=https://api.fut7pro.com.br
 NEXT_PUBLIC_APP_URL=https://www.fut7pro.com.br
 
 # Mercado Pago
