--- a/env.example
+++ b/env.example
@@ -1,9 +1,9 @@
 # Configurações do Next.js
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 # URL do backend Nest (em produção usar https://api.fut7pro.com.br)
-NEXT_PUBLIC_API_URL=http://127.0.0.1:3333
+NEXT_PUBLIC_API_URL=https://api.fut7pro.com.br
 # Calls server-side usam BACKEND_URL (mantem consistencia com NEXT_PUBLIC_API_URL)
-BACKEND_URL=http://127.0.0.1:3333
+BACKEND_URL=https://api.fut7pro.com.br
 # Bloqueia acesso direto ao Prisma quando true (obrigatório em produção)
 DISABLE_WEB_DIRECT_DB=false
 
