--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@sentry/nextjs": "^10.11.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "critters": "^0.0.23",
