--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
+    "baseline-browser-mapping": "^2.9.11",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^10.1.5",
@@ -107,7 +108,7 @@
     "prisma": "^6.9.0",
     "ts-jest": "^29.4.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.4.5"
   },
   "overrides": {
     "next": "14.2.32",
