sync: aplicar alterações locais

--- a/env.local.example
+++ b/env.local.example
@@ -1,6 +1,7 @@
 # API Configuration
 NEXT_PUBLIC_API_URL=https://api.fut7pro.com.br
 NEXT_PUBLIC_APP_URL=https://www.fut7pro.com.br
+NEXT_PUBLIC_DEFAULT_RACHA_SLUG=vitrine
 
 # Mercado Pago
 NEXT_PUBLIC_MERCADOPAGO_PUBLIC_KEY=TEST-...
