sync: aplicar alterações locais

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -7,9 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10.19.0
+          run_install: false
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm ci
-      - run: npm run typecheck # ex: "tsc --noEmit"
-      - run: npm run lint # ex: "eslint ."
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run typecheck # ex: "tsc --noEmit"
+      - run: pnpm run lint # ex: "eslint ."
