--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -2,62 +2,76 @@ name: Frontend CI/CD
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
 
 env:
-  NODE_VERSION: '20'
-  PNPM_VERSION: '8'
+  NODE_VERSION: "20"
+  PNPM_VERSION: "10.19.0"
 
 jobs:
   # Job de qualidade de código
   quality:
     name: Code Quality
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          cache: "pnpm"
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run ESLint
-        run: npm run lint
+        run: pnpm run lint
 
       - name: Run TypeScript check
-        run: npm run type-check
+        run: pnpm run type-check
 
       - name: Run Prettier check
-        run: npm run format:check
+        run: pnpm run format:check
 
   # Job de testes
   test:
     name: Tests
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          cache: "pnpm"
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run tests
-        run: npm run test:ci
+        run: pnpm run test:ci
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
@@ -68,19 +82,26 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     needs: [quality, test]
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          cache: "pnpm"
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Setup environment
         run: |
@@ -89,7 +110,7 @@ jobs:
           echo "NEXT_PUBLIC_APP_URL=https://staging.fut7pro.com" >> .env.local
 
       - name: Build application
-        run: npm run build
+        run: pnpm run build
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -104,19 +125,26 @@ jobs:
     runs-on: ubuntu-latest
     needs: [quality, test]
     if: github.event_name == 'pull_request'
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          cache: "pnpm"
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Setup environment
         run: |
@@ -124,7 +152,7 @@ jobs:
           echo "NEXT_PUBLIC_API_URL=https://api-staging.fut7pro.com" >> .env.local
 
       - name: Analyze bundle
-        run: npm run analyze
+        run: pnpm run analyze
 
       - name: Upload bundle analysis
         uses: actions/upload-artifact@v4
@@ -137,29 +165,41 @@ jobs:
   security:
     name: Security Scan
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          cache: "pnpm"
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run security audit
-        run: npm audit --audit-level=moderate
+        run: pnpm audit --audit-level=moderate
 
       - name: Run Snyk security scan
         uses: snyk/actions/node@master
+        if: ${{ secrets.SNYK_TOKEN != '' }}
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --severity-threshold=high
+
+      - name: Skip Snyk scan (token not configured)
+        if: ${{ secrets.SNYK_TOKEN == '' }}
+        run: echo "SNYK_TOKEN não configurado. Etapa Snyk ignorada."
 
   # Job de deploy preview (apenas para PRs)
   preview:
@@ -168,19 +208,26 @@ jobs:
     needs: [quality, test, build]
     if: github.event_name == 'pull_request'
     environment: development
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          cache: "pnpm"
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Setup environment
         run: |
@@ -189,7 +236,7 @@ jobs:
           echo "NEXT_PUBLIC_APP_URL=https://staging.fut7pro.com" >> .env.local
 
       - name: Build for preview
-        run: npm run build
+        run: pnpm run build
 
       - name: Deploy to Vercel Preview
         uses: amondnet/vercel-action@v25
@@ -197,7 +244,7 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod'
+          vercel-args: "--prod"
 
   # Job de notificação
   notify:
@@ -205,26 +252,30 @@ jobs:
     runs-on: ubuntu-latest
     needs: [quality, test, build, security]
     if: always()
-    
+
     steps:
       - name: Notify Slack on failure
         uses: 8398a7/action-slack@v3
-        if: failure()
+        if: failure() && secrets.SLACK_WEBHOOK_URL != ''
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         with:
           status: failure
-          text: '❌ Frontend CI/CD failed for ${{ github.repository }}#${{ github.run_number }}'
-          channel: '#devops'
-          username: 'GitHub Actions'
+          text: "❌ Frontend CI/CD failed for ${{ github.repository }}#${{ github.run_number }}"
+          channel: "#devops"
+          username: "GitHub Actions"
 
       - name: Notify Slack on success
         uses: 8398a7/action-slack@v3
-        if: success()
+        if: success() && secrets.SLACK_WEBHOOK_URL != ''
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         with:
           status: success
-          text: '✅ Frontend CI/CD passed for ${{ github.repository }}#${{ github.run_number }}'
-          channel: '#devops'
-          username: 'GitHub Actions'
+          text: "✅ Frontend CI/CD passed for ${{ github.repository }}#${{ github.run_number }}"
+          channel: "#devops"
+          username: "GitHub Actions"
+
+      - name: Skip Slack notification (webhook not configured)
+        if: ${{ secrets.SLACK_WEBHOOK_URL == '' }}
+        run: echo "SLACK_WEBHOOK_URL não configurado. Notificação ignorada."
