--- a/.github/workflows/seo-ci.yml
+++ b/.github/workflows/seo-ci.yml
@@ -2,7 +2,7 @@ name: SEO / Headers CI
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   seo:
@@ -11,19 +11,27 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.19.0
+          run_install: false
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install deps
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+        run: pnpm exec playwright install --with-deps
 
       - name: Run SEO tests (prod endpoints)
         env:
           # caso seus testes usem BASE_URL
           BASE_URL: ${{ secrets.BASE_URL || 'https://app.fut7pro.com.br' }}
-        run: npm run test:seo
+        run: pnpm run test:seo
