--- a/.github/workflows/web-pr3.yml
+++ b/.github/workflows/web-pr3.yml
@@ -2,43 +2,51 @@ name: Web PR3 CI
 
 on:
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
     paths:
-      - 'src/**'
-      - 'package.json'
-      - 'next.config.*'
-      - 'tsconfig.json'
-      - '.eslintrc.*'
-      - 'eslint.config.*'
+      - "src/**"
+      - "package.json"
+      - "next.config.*"
+      - "tsconfig.json"
+      - ".eslintrc.*"
+      - "eslint.config.*"
 
 env:
-  NODE_VERSION: '20'
+  NODE_VERSION: "20"
+  PNPM_VERSION: "10.19.0"
 
 jobs:
   # Job de verificações estáticas (sempre roda em PR)
   static-checks:
     name: Static Checks
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          cache: "pnpm"
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run ESLint (allow warnings)
-        run: npm run lint
+        run: pnpm run lint
         continue-on-error: true
 
       - name: Run TypeScript check (non-blocking)
-        run: npm run typecheck
+        run: pnpm run typecheck
         continue-on-error: true
 
   # Job de build (só roda quando NÃO for Draft)
@@ -47,24 +55,31 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.pull_request.draft == false }}
     needs: [static-checks]
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          cache: "pnpm"
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Generate Prisma client (if exists)
         run: |
           if [ -f "prisma/schema.prisma" ]; then
-            npx prisma generate
+            pnpm exec prisma generate
           else
             echo "No Prisma schema found, skipping generate"
           fi
@@ -79,7 +94,7 @@ jobs:
           echo "NEXT_PUBLIC_APP_URL=https://staging.fut7pro.com" >> .env.local
 
       - name: Build application
-        run: npm run build
+        run: pnpm run build
         continue-on-error: true
 
       - name: Upload build artifacts
@@ -96,19 +111,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: [static-checks, build]
     if: always()
-    
+
     steps:
       - name: Check results
         run: |
           echo "Static checks: ${{ needs.static-checks.result }}"
           echo "Build: ${{ needs.build.result }}"
-          
+
           if [ "${{ needs.static-checks.result }}" = "success" ]; then
             echo "✅ Static checks passed"
           else
             echo "⚠️ Static checks had warnings/errors"
           fi
-          
+
           if [ "${{ needs.build.result }}" = "success" ]; then
             echo "✅ Build passed"
           elif [ "${{ needs.build.result }}" = "skipped" ]; then
