--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -165,6 +165,8 @@ jobs:
   security:
     name: Security Scan
     runs-on: ubuntu-latest
+    env:
+      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
     steps:
       - name: Checkout code
@@ -191,14 +193,14 @@ jobs:
 
       - name: Run Snyk security scan
         uses: snyk/actions/node@master
-        if: ${{ secrets.SNYK_TOKEN != '' }}
+        if: env.SNYK_TOKEN != ''
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SNYK_TOKEN: ${{ env.SNYK_TOKEN }}
         with:
           args: --severity-threshold=high
 
       - name: Skip Snyk scan (token not configured)
-        if: ${{ secrets.SNYK_TOKEN == '' }}
+        if: env.SNYK_TOKEN == ''
         run: echo "SNYK_TOKEN não configurado. Etapa Snyk ignorada."
 
   # Job de deploy preview (apenas para PRs)
@@ -252,13 +254,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: [quality, test, build, security]
     if: always()
+    env:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
     steps:
       - name: Notify Slack on failure
         uses: 8398a7/action-slack@v3
-        if: failure() && secrets.SLACK_WEBHOOK_URL != ''
+        if: failure() && env.SLACK_WEBHOOK_URL != ''
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ env.SLACK_WEBHOOK_URL }}
         with:
           status: failure
           text: "❌ Frontend CI/CD failed for ${{ github.repository }}#${{ github.run_number }}"
@@ -267,9 +271,9 @@ jobs:
 
       - name: Notify Slack on success
         uses: 8398a7/action-slack@v3
-        if: success() && secrets.SLACK_WEBHOOK_URL != ''
+        if: success() && env.SLACK_WEBHOOK_URL != ''
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ env.SLACK_WEBHOOK_URL }}
         with:
           status: success
           text: "✅ Frontend CI/CD passed for ${{ github.repository }}#${{ github.run_number }}"
@@ -277,5 +281,5 @@ jobs:
           username: "GitHub Actions"
 
       - name: Skip Slack notification (webhook not configured)
-        if: ${{ secrets.SLACK_WEBHOOK_URL == '' }}
+        if: env.SLACK_WEBHOOK_URL == ''
         run: echo "SLACK_WEBHOOK_URL não configurado. Notificação ignorada."
