--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "3.2.2",
     "@headlessui/react": "^2.2.4",
     "@prisma/client": "^6.9.0",
     "@sentry/browser": "^10.11.0",
