--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -188,8 +188,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Run security audit
-        run: pnpm audit --audit-level=moderate
+      - name: Run blocking security audit (critical/prod)
+        run: pnpm audit --prod --audit-level=critical
+
+      - name: Run informational security audit (moderate/prod)
+        continue-on-error: true
+        run: pnpm audit --prod --audit-level=moderate
 
       - name: Run Snyk security scan
         uses: snyk/actions/node@master
