--- a/package.json
+++ b/package.json
@@ -41,25 +41,20 @@
     "@dnd-kit/utilities": "3.2.2",
     "@headlessui/react": "^2.2.4",
     "@prisma/client": "^6.9.0",
-    "@sentry/browser": "^10.11.0",
-    "@sentry/nextjs": "^10.11.0",
+    "@sentry/browser": "^10.27.0",
+    "@sentry/nextjs": "^10.27.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
-    "cors": "^2.8.5",
     "critters": "^0.0.23",
     "date-fns": "^4.1.0",
-    "express": "^5.1.0",
     "framer-motion": "^12.17.0",
     "html2canvas": "^1.4.1",
     "json2csv": "^6.0.0-alpha.2",
-    "jspdf": "^3.0.1",
     "lucide-react": "^0.514.0",
-    "next": "14.2.32",
-    "next-auth": "^4.24.11",
-    "node-cron": "^4.1.1",
-    "pdfmake": "^0.2.20",
+    "next": "14.2.35",
+    "next-auth": "^4.24.12",
     "postcss": "^8.5.4",
     "react": "18.2.0",
     "react-day-picker": "^9.7.0",
@@ -71,7 +66,7 @@
     "recharts": "^3.0.0",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4",
     "zod": "^3.25.76"
   },
@@ -80,12 +75,9 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/json2csv": "^5.0.7",
     "@types/node": "^20.11.30",
-    "@types/node-cron": "^3.0.11",
     "@types/react": "^18.2.49",
     "@types/react-dom": "^18.2.18",
     "@types/recharts": "^1.8.29",
@@ -112,7 +104,8 @@
     "typescript": "^5.4.5"
   },
   "overrides": {
-    "next": "14.2.32",
+    "next": "14.2.35",
+    "glob": "10.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
