sync: aplicar alterações locais

--- a/env.example
+++ b/env.example
@@ -48,6 +48,9 @@ NODE_ENV=development
 # Configurações de SEO
 SITE_NAME=Fut7Pro
 GOOGLE_SITE_VERIFICATION=
+SITEMAP_PUBLIC_TENANT_SLUGS=vitrine
+# Opcional: endpoint público no backend que retorne slugs para sitemap.
+# SITEMAP_BACKEND_SLUGS_ENDPOINT=https://api.fut7pro.com.br/public/sitemap/slugs
 
 # Seeds (somente dev local)
 # Use hashes gerados previamente (ex: bcrypt) — não commit valores reais
