sync: aplicar alterações locais

--- a/env.example
+++ b/env.example
@@ -48,7 +48,8 @@ NODE_ENV=development
 # Configurações de SEO
 SITE_NAME=Fut7Pro
 GOOGLE_SITE_VERIFICATION=
-SITEMAP_PUBLIC_TENANT_SLUGS=vitrine
+# Fallback manual (CSV). Só usado se o endpoint backend falhar.
+SITEMAP_PUBLIC_TENANT_SLUGS=
 # Opcional: endpoint público no backend que retorne slugs para sitemap.
 # SITEMAP_BACKEND_SLUGS_ENDPOINT=https://api.fut7pro.com.br/public/sitemap/slugs
 
