sync: aplicar alterações locais

--- a/env.local.example
+++ b/env.local.example
@@ -11,6 +11,7 @@ NEXT_PUBLIC_DEMO_TENANT_ID=demo-tenant
 
 # Environment
 NODE_ENV=development
+SUPERADMIN_ENABLE_LEGACY_ROUTES=false
 
 # NextAuth
 NEXTAUTH_URL=https://www.fut7pro.com.br
