--- a/env.example
+++ b/env.example
@@ -44,6 +44,7 @@ ALLOWED_FILE_TYPES=image/jpeg,image/png,image/webp
 
 # Configurações de Ambiente
 NODE_ENV=development 
+SUPERADMIN_ENABLE_LEGACY_ROUTES=false
 
 # Configurações de SEO
 SITE_NAME=Fut7Pro
