sync: aplicar alterações locais

--- a/env.example
+++ b/env.example
@@ -44,6 +44,7 @@ ALLOWED_FILE_TYPES=image/jpeg,image/png,image/webp
 
 # Configurações de Ambiente
 NODE_ENV=development 
+# Segurança SuperAdmin: false bloqueia páginas/APIs legacy
 SUPERADMIN_ENABLE_LEGACY_ROUTES=false
 
 # Configurações de SEO
