--- a/env.local.example
+++ b/env.local.example
@@ -11,6 +11,7 @@ NEXT_PUBLIC_DEMO_TENANT_ID=demo-tenant
 
 # Environment
 NODE_ENV=development
+# Segurança SuperAdmin: false bloqueia páginas/APIs legacy
 SUPERADMIN_ENABLE_LEGACY_ROUTES=false
 
 # NextAuth
